--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+    <% flash.each do |name,msg| %>
+        <%= content_tag( :div, msg, class: "alert laert -#{name}") %>
+<% end %>
+
 <%= yield %>
 
 </body>
