--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,14 +4,27 @@
   <title>Csciproj1</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag "defaults", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
     <% flash.each do |name,msg| %>
         <%= content_tag( :div, msg, class: "alert laert -#{name}") %>
-<% end %>
+    <% end %>
 
+    <% if user_signed_in? %>
+        <ul>
+          <li><%= link_to 'Submit link', new_link_path %></li>
+          <li><%= link_to 'Account', edit_user_registration_path %></li>
+          <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
+        </ul>
+    <% else %>
+        <ul>
+          <li><%= link_to 'Sign up', new_user_registration_path %></li>
+          <li><%= link_to 'Sign in', new_user_session_path %></li>
+        </ul>
+    <%end%>
 <%= yield %>
 
 </body>
